ci: set CARGO_HOME with platform-appropriate paths in Windows workflows
Fix excel-compat and release workflows to write a Windows CARGO_HOME path (USERPROFILE\.cargo) instead of a bash-style /c/... path, avoiding breakage when later steps run under PowerShell/cargo on windows-latest.

--- a/.github/workflows/excel-compat.yml
+++ b/.github/workflows/excel-compat.yml
@@ -70,8 +70,10 @@ jobs:
       # contention on shared ~/.cargo. In GitHub Actions we prefer the default
       # CARGO_HOME so cargo builds share the same cache.
       - name: Use shared Cargo home for CI caching
-        shell: bash
-        run: echo "CARGO_HOME=$HOME/.cargo" >> "$GITHUB_ENV"
+        shell: powershell
+        run: |
+          $cargoHome = Join-Path $env:USERPROFILE ".cargo"
+          "CARGO_HOME=$cargoHome" | Out-File -FilePath $env:GITHUB_ENV -Append
 
       - uses: actions/setup-python@v5
         with:
