feat(formula-xls): parse BIFF globals for date system + numFmts
- Add BIFF workbook-global parser for 1904/FORMAT/XF records
- Expose XF->format code resolver with builtin + placeholder fallback
- Wire import_xls_path to set Workbook.date_system and emit warnings on failure
- Add module-level unit tests for BIFF5/8 format string decoding

--- a/crates/formula-xls/Cargo.toml
+++ b/crates/formula-xls/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 calamine = "0.32"
 cfb = "0.10"
+formula-format = { path = "../formula-format" }
 formula-model = { path = "../formula-model" }
 thiserror = "2.0"
