perf(text-layout): split HarfBuzz exports to avoid bundling in browser
Move HarfBuzz-specific APIs behind a new "@formula/text-layout/harfbuzz" export. This prevents HarfBuzz WASM and node builtins from being pulled into browser bundles when only Canvas-based text measurement is used. Updated type definitions and internal HarfBuzz tests.

--- a/packages/text-layout/package.json
+++ b/packages/text-layout/package.json
@@ -10,6 +10,10 @@
     ".": {
       "types": "./index.d.ts",
       "default": "./src/index.js"
+    },
+    "./harfbuzz": {
+      "types": "./harfbuzz.d.ts",
+      "default": "./src/harfbuzz.js"
     }
   },
   "scripts": {
