--- a/crates/formula-xls/Cargo.toml
+++ b/crates/formula-xls/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 calamine = "0.32"
 cfb = "0.10"
+encoding_rs = "0.8"
 formula-format = { path = "../formula-format" }
 formula-model = { path = "../formula-model" }
 thiserror = "2.0"
