--- a/crates/formula-xls/Cargo.toml
+++ b/crates/formula-xls/Cargo.toml
@@ -10,3 +10,6 @@ encoding_rs = "0.8"
 formula-format = { path = "../formula-format" }
 formula-model = { path = "../formula-model" }
 thiserror = "2.0"
+
+[dev-dependencies]
+tempfile = "3.10"
