--- a/services/api/package.json
+++ b/services/api/package.json
@@ -20,6 +20,8 @@
     "@fastify/cookie": "^10.0.1",
     "@fastify/cors": "^10.0.2",
     "@formula/audit-core": "workspace:*",
+    "@fastify/formbody": "^8.0.2",
+    "@node-saml/node-saml": "^5.1.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/context-async-hooks": "^2.3.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.209.0",
@@ -46,10 +48,12 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
     "@types/pg": "^8.11.10",
+    "@xmldom/xmldom": "^0.8.10",
     "pg-mem": "^3.0.5",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "vitest": "^2.1.8",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "xml-crypto": "^6.0.0"
   }
 }
