feat(api): harden MFA secrets, recovery codes, and org enforcement
- Store TOTP seeds in encrypted secret store (mfa:totp:) and migrate legacy column\n- Add recovery code table + regeneration endpoint + login support with audit events\n- Enforce org require_mfa on sensitive org/admin endpoints (session-based)\n- Add MFA e2e tests covering secret storage, login, recovery codes, and policy

--- a/services/api/package.json
+++ b/services/api/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
     "migrate": "tsx src/scripts/migrate.ts",
+    "mfa:totp:migrate-secrets": "tsx src/scripts/migrateTotpSecrets.ts",
     "retention:sweep": "tsx src/scripts/retention.ts",
     "keys:rotate": "tsx src/scripts/rotateKeys.ts",
     "secrets:rotate": "tsx src/scripts/secretsRotate.ts",
