--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -48,6 +48,7 @@ keyring = "3.6"
 rand_core = "0.6"
 sha2 = "0.10"
 hex = "0.4"
+sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono"] }
 tauri = { version = "2.9", optional = true, features = ["tray-icon"] }
 tauri-plugin-global-shortcut = { version = "2.3", optional = true }
 tauri-plugin-updater = { version = "2.9", optional = true }
@@ -56,6 +57,7 @@ thiserror = "1.0"
 [dev-dependencies]
 cfb = "0.10"
 tempfile = "3.10"
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 xlsx-diff = { path = "../../../crates/xlsx-diff" }
 
 [build-dependencies]
