feat: add shared WorkbookBackend contract package
- Introduce @formula/workbook-backend with canonical WorkbookBackend + DTO types
- Migrate engine and desktop adapters to import/re-export from the shared contract
- Add contract shape test to ensure both backends expose required methods

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -24,6 +24,7 @@
     "@formula/scripting": "workspace:*",
     "@formula/spreadsheet-frontend": "workspace:*",
     "@formula/text-layout": "workspace:*",
+    "@formula/workbook-backend": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "yjs": "^13.6.27"
