--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "dependencies": {
+    "@formula/workbook-backend": "workspace:*"
+  },
   "scripts": {
     "build:wasm": "node scripts/build-wasm.mjs",
     "smoke:wasm": "node scripts/smoke-wasm.mjs"
