feat(desktop): add lossless XLSB save support via formula-xlsb
- Track XLSB provenance (origin_xlsb_path + sheet ordinal) when opening .xlsb
- Route .xlsb writes through formula_xlsb save_as/save_with_cell_edits; never emit XLSX bytes
- Enable formula-xlsb write feature for RGCE encoding when saving formulas
- Update save_workbook/mark_saved to keep .xlsb extension and update provenance
- Add XLSB roundtrip + single-cell edit part-diff regression tests

--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -37,7 +37,7 @@ formula-model = { path = "../../../crates/formula-model" }
 formula-storage = { path = "../../../crates/formula-storage" }
 formula-vba = { path = "../../../crates/formula-vba" }
 formula-vba-runtime = { path = "../../../crates/formula-vba-runtime" }
-formula-xlsb = { path = "../../../crates/formula-xlsb" }
+formula-xlsb = { path = "../../../crates/formula-xlsb", features = ["write"] }
 formula-xlsx = { path = "../../../crates/formula-xlsx" }
 rust_xlsxwriter = "0.79"
 serde = { version = "1.0", features = ["derive"] }
