feat: add fill handle drag-to-fill + shared autofill engine
- Add interactive fill handle drag with live dashed preview and commit events in @formula/grid
- Introduce @formula/fill-engine to compute fill edits (copy/series/formulas) incl. A1 relative ref shifting and month/day sequences
- Wire web app fill commits through @formula/engine setCells + recalc
- Add desktop helper to apply fill commits via DocumentController batching (single undo step)
- Add unit tests for fill engine + grid interaction helpers and a web Playwright E2E

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -20,6 +20,7 @@
     "@formula/collab-comments": "workspace:*",
     "@formula/data-io": "workspace:*",
     "@formula/engine": "workspace:*",
+    "@formula/fill-engine": "workspace:*",
     "@formula/python-runtime": "workspace:*",
     "@formula/scripting": "workspace:*",
     "@formula/spreadsheet-frontend": "workspace:*",
