feat(extensibility): support when clauses for keybindings and context menus
- Allow optional "when" on contributes.keybindings in the shared manifest schema

- Expose keybinding when-clauses via ExtensionHost / BrowserExtensionHost contributions

- Desktop keybinding handler now respects when-clauses via the context key service

- Keep selection stable on right-click so context menus apply to the current selection

- Show command titles in the desktop context menu and add e2e coverage (keybinding + context menu)

--- a/extensions/sample-hello/package.json
+++ b/extensions/sample-hello/package.json
@@ -55,6 +55,27 @@
         "title": "Sample Hello Panel"
       }
     ],
+    "keybindings": [
+      {
+        "command": "sampleHello.sumSelection",
+        "key": "ctrl+shift+y",
+        "mac": "cmd+shift+y",
+        "when": "hasSelection"
+      }
+    ],
+    "menus": {
+      "cell/context": [
+        {
+          "command": "sampleHello.sumSelection",
+          "when": "hasSelection",
+          "group": "extensions@1"
+        },
+        {
+          "command": "sampleHello.openPanel",
+          "group": "extensions@2"
+        }
+      ]
+    },
     "configuration": {
       "title": "Sample Hello",
       "properties": {
