feat(desktop): integrate shared @formula/grid renderer behind flag
- Add DesktopSharedGrid + DocumentCellProvider to drive CanvasGridRenderer imperatively\n- Add ?grid=shared|legacy switch (env fallbacks) and wire into SpreadsheetApp\n- Keep legacy renderer intact; shared mode supports selection/edit/scroll/resize + overlays\n- Add Playwright coverage for both modes and an opt-in perf smoke test\n- Make DLP audit logger browser-safe; harden whenIdle/computed-value handling for e2e

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -21,6 +21,7 @@
     "@formula/data-io": "workspace:*",
     "@formula/engine": "workspace:*",
     "@formula/fill-engine": "workspace:*",
+    "@formula/grid": "workspace:*",
     "@formula/python-runtime": "workspace:*",
     "@formula/scripting": "workspace:*",
     "@formula/spreadsheet-frontend": "workspace:*",
