--- a/crates/xlsx-diff/Cargo.toml
+++ b/crates/xlsx-diff/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 clap = { version = "4.5", features = ["derive"] }
+globset = "0.4"
 roxmltree = "0.20"
 tempfile = "3.10"
 walkdir = "2.5"
