--- a/crates/formula-xls/Cargo.toml
+++ b/crates/formula-xls/Cargo.toml
@@ -9,6 +9,7 @@ cfb = "0.10"
 encoding_rs = "0.8"
 formula-format = { path = "../formula-format" }
 formula-model = { path = "../formula-model" }
+log = "0.4"
 thiserror = "2.0"
 
 [dev-dependencies]
