--- a/crates/formula-xlsb/Cargo.toml
+++ b/crates/formula-xlsb/Cargo.toml
@@ -12,6 +12,8 @@ write = ["formula-biff/encode"]
 formula-format = { path = "../formula-format" }
 formula-model = { path = "../formula-model" }
 quick-xml = "0.31"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 thiserror = "1.0"
 zip = { version = "0.6", default-features = false, features = ["deflate"] }
 formula-biff = { path = "../formula-biff", default-features = false }
