ci(excel-oracle): broaden default tag slice
- Expand the Windows excel-compat workflow’s default include-tag set to match the\n  curated compat_gate slice (adds representative text/date/lookup/dynamic-array\n  functions) while keeping the run bounded.\n- Document corpus size (~1.4k) and the generator’s functionCatalog validation.

--- a/.github/workflows/excel-compat.yml
+++ b/.github/workflows/excel-compat.yml
@@ -97,7 +97,7 @@ jobs:
             # core operators + a few baseline functions.
             if ([string]::IsNullOrWhiteSpace($include)) {
               # Include a small amount of dynamic array spill coverage as well.
-              $include = "add,sub,mul,div,cmp,SUM,IF,IFERROR,ISERROR,error,range,TRANSPOSE,SEQUENCE"
+              $include = "add,sub,mul,div,cmp,SUM,IF,IFERROR,ISERROR,error,range,TRANSPOSE,SEQUENCE,COUNT,COUNTIF,TEXT,VALUE,DATEVALUE,WORKDAY,NETWORKDAYS,XLOOKUP,XMATCH,FILTER,SORT,UNIQUE"
             }
           }
 
