feat(formula-xlsb): AST-based rgce encoder with context + rgcb
- Add formula-engine AST -> BIFF12 rgce encoder that resolves 3D refs, names and NameX/UDF calls via WorkbookContext
- Emit rgcb for array literals (PtgArray) and thread it through CellEdit + patch writer
- Make BrtFmlaString patching resilient to inconsistent rich/phonetic flags while preserving cached bytes when possible
- Extend formula-biff FTAB allowlist for modern functions used by formula-engine and add roundtrip tests

--- a/crates/formula-xlsb/Cargo.toml
+++ b/crates/formula-xlsb/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [features]
 # Keep the default reader minimal; enabling `write` pulls in the formula parser
 # (via `formula-engine`) so worksheet patchers can emit BIFF12 formulas.
-write = ["formula-biff/encode"]
+write = ["formula-biff/encode", "dep:formula-engine"]
 
 [dependencies]
 formula-format = { path = "../formula-format" }
@@ -17,6 +17,7 @@ serde_json = "1.0"
 thiserror = "1.0"
 zip = { version = "0.6", default-features = false, features = ["deflate"] }
 formula-biff = { path = "../formula-biff", default-features = false }
+formula-engine = { path = "../formula-engine", optional = true }
 
 [dev-dependencies]
 assert_cmd = "2.0"
