--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,8 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+      - name: Run excel-oracle corpus coverage guards
+        run: cargo test -p formula-engine --test excel_oracle_coverage --locked
       - name: Run compatibility gate (engine vs pinned Excel dataset)
         run: python tools/excel-oracle/compat_gate.py
       - name: Publish compatibility summary
