feat(power-query): publish workspace package + remove deep imports
- Add packages/power-query/package.json as @formula/power-query with exports (., connectors, m, node)\n- Establish stable public JS + TS declaration surface (engine, refresh, cache, connectors, values, cron, oauth2/credentials)\n- Replace desktop app + docs deep imports (packages/power-query/src/*) with @formula/power-query\n- Treat @formula/data-io as an optional peer dep and lazy-load it for Arrow/Parquet features\n- Add smoke tests to guard package exports (runtime + TS)

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -22,6 +22,7 @@
     "@formula/engine": "workspace:*",
     "@formula/fill-engine": "workspace:*",
     "@formula/grid": "workspace:*",
+    "@formula/power-query": "workspace:*",
     "@formula/python-runtime": "workspace:*",
     "@formula/scripting": "workspace:*",
     "@formula/spreadsheet-frontend": "workspace:*",
