--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           python-version: "3.11"
       - name: Run excel-oracle corpus coverage guards
-        run: cargo test -p formula-engine --test excel_oracle_coverage --locked
+        run: cargo test -p formula-engine --test excel_oracle_coverage --test function_catalog_sync --locked
       - name: Run compatibility gate (engine vs pinned Excel dataset)
         run: python tools/excel-oracle/compat_gate.py
       - name: Publish compatibility summary
