feat(desktop): add app chrome tokens for ribbon/titlebar/statusbar
- Added bg/text/border/accent/radius tokens needed for ribbon/titlebar/statusbar UI
- Provided dark + high-contrast + forced-colors overrides
- Updated theme screen snapshots for expanded token set
- Adjusted desktop test:node runner to only execute node:test suites

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -9,7 +9,7 @@
     "build": "node scripts/ensure-pyodide-assets.mjs && vite build",
     "preview": "vite preview --port 4174 --strictPort",
     "pyodide:setup": "node scripts/ensure-pyodide-assets.mjs",
-    "test:node": "node --test",
+    "test:node": "node scripts/run-node-tests.mjs",
     "test": "vitest run --minWorkers=1",
     "pretest:e2e": "pnpm -w build:wasm",
     "test:e2e": "playwright test"
