ci(desktop): preflight validate Tauri updater config on release
Adds scripts/check-updater-config.mjs to fail tagged releases early when\napps/desktop/src-tauri/tauri.conf.json still has placeholder updater\nsettings (pubkey/endpoints).\n\nThe release workflow now runs this check before tauri-action so we never\npublish installers that can't verify or fetch updates.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,9 @@ jobs:
         with:
           node-version: 20
 
+      - name: Validate Tauri updater config
+        run: node scripts/check-updater-config.mjs
+
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
