--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ desktop = [
     "dep:tauri",
     "dep:tauri-build",
     "dep:tauri-plugin-global-shortcut",
+    "dep:tauri-plugin-single-instance",
     "dep:tauri-plugin-updater",
 ]
 
@@ -42,6 +43,7 @@ formula-xlsx = { path = "../../../crates/formula-xlsx" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "sync", "time"] }
+url = "2.5"
 uuid = { version = "1.8", features = ["v4"] }
 keyring = "3.6"
 rand_core = "0.6"
@@ -50,6 +52,7 @@ hex = "0.4"
 sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono"] }
 tauri = { version = "2.9", optional = true, features = ["tray-icon"] }
 tauri-plugin-global-shortcut = { version = "2.3", optional = true }
+tauri-plugin-single-instance = { version = "2.2", optional = true }
 tauri-plugin-updater = { version = "2.9", optional = true }
 thiserror = "1.0"
 
