refactor: extract extension marketplace into workspace package
- Moved MarketplaceClient + WebExtensionManager into @formula/extension-marketplace
- Updated web harness/tests to import from the package
- Added workspace deps for web/desktop and updated lockfile

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -20,6 +20,7 @@
     "@formula/collab-comments": "workspace:*",
     "@formula/data-io": "workspace:*",
     "@formula/engine": "workspace:*",
+    "@formula/extension-marketplace": "workspace:*",
     "@formula/fill-engine": "workspace:*",
     "@formula/grid": "workspace:*",
     "@formula/power-query": "workspace:*",
