--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@formula/extension-api": "workspace:*",
     "@formula/extension-host": "workspace:*",
+    "@formula/extension-marketplace": "workspace:*",
     "@formula/engine": "workspace:*",
     "@formula/fill-engine": "workspace:*",
     "@formula/grid": "workspace:*",
