--- a/crates/formula-model/Cargo.toml
+++ b/crates/formula-model/Cargo.toml
@@ -8,6 +8,7 @@ description = "Core in-memory data model for Formula spreadsheets (workbooks/she
 [dependencies]
 formula-columnar = { path = "../formula-columnar" }
 csv = "1.3"
+encoding_rs = "0.8"
 regex = "1.10"
 serde = { version = "1.0", features = ["derive"] }
 formula-format = { path = "../formula-format" }
