ci: compile-check Tauri desktop feature set on Linux

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,6 +120,30 @@ jobs:
       - name: Smoke-check WASM assets
         run: pnpm smoke:wasm
 
+  desktop-tauri-check:
+    name: Desktop (Tauri) Rust compile check
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      # Our dev scripts default to a repo-local CARGO_HOME to avoid cross-agent
+      # contention on shared ~/.cargo. In GitHub Actions we prefer the default
+      # CARGO_HOME so cargo installs/builds share the same cache.
+      - name: Use shared Cargo home for CI caching
+        run: echo "CARGO_HOME=$HOME/.cargo" >> "$GITHUB_ENV"
+      - name: Install Linux dependencies (Tauri/WebView)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libgtk-3-dev \
+            libwebkit2gtk-4.1-dev \
+            libayatana-appindicator3-dev \
+            librsvg2-dev \
+            libssl-dev \
+            patchelf
+      - name: Check formula-desktop-tauri builds with full desktop feature set
+        run: cargo check -p formula-desktop-tauri --features desktop
+
   node-tests:
     name: Node tests
     runs-on: ubuntu-latest
