feat(formula-io): sniff workbook format when extension missing
- Extend internal format detection to sniff file headers when extension is unknown
  (OLE2 => .xls, ZIP + workbook.xml/bin => .xlsx/.xlsb)
- Add regression tests ensuring open_workbook_model can open extension-less XLSX/XLSB/XLS tempfiles

--- a/crates/formula-io/Cargo.toml
+++ b/crates/formula-io/Cargo.toml
@@ -10,6 +10,7 @@ formula-xlsx = { path = "../formula-xlsx" }
 formula-xls = { path = "../formula-xls" }
 formula-xlsb = { path = "../formula-xlsb" }
 thiserror = "1.0"
+zip = { version = "2.1", default-features = false }
 
 [dev-dependencies]
 tempfile = "3.10"
