--- a/crates/formula-xlsx/Cargo.toml
+++ b/crates/formula-xlsx/Cargo.toml
@@ -9,6 +9,7 @@ description = "XLSX/XLSM import/export and package preservation utilities for Fo
 chrono = { version = "0.4", default-features = false, features = ["std"] }
 formula-engine = { path = "../formula-engine" }
 formula-format = { path = "../formula-format" }
+formula-columnar = { path = "../formula-columnar" }
 formula-model = { path = "../formula-model" }
 formula-vba = { path = "../formula-vba" }
 quick-xml = { version = "0.37", features = ["serialize"] }
