--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ desktop = [
     "dep:tauri-build",
     "dep:tauri-plugin-global-shortcut",
     "dep:tauri-plugin-single-instance",
+    "dep:tauri-plugin-notification",
     "dep:tauri-plugin-updater",
 ]
 
@@ -53,6 +54,7 @@ sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-r
 tauri = { version = "2.9", optional = true, features = ["tray-icon"] }
 tauri-plugin-global-shortcut = { version = "2.3", optional = true }
 tauri-plugin-single-instance = { version = "2.2", optional = true }
+tauri-plugin-notification = { version = "2", optional = true }
 tauri-plugin-updater = { version = "2.9", optional = true }
 thiserror = "1.0"
 
