--- a/crates/formula-engine/Cargo.toml
+++ b/crates/formula-engine/Cargo.toml
@@ -21,6 +21,7 @@ serde = { version = "1.0", features = ["derive"] }
 formula-format = { path = "../formula-format" }
 serde_json = "1.0"
 thiserror = "2.0"
+statrs = { version = "0.16", default-features = false }
 
 # Bytecode cache + SIMD kernels for bulk range evaluation.
 ahash = "0.8"
