ci(desktop): validate tauri version matches release tag
Add a CI-only check that compares apps/desktop/src-tauri/tauri.conf.json version to the pushed vX.Y.Z tag and fails release builds early on mismatch.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,24 @@ permissions:
   contents: write
 
 jobs:
+  validate-version:
+    name: Validate desktop version matches tag
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Check desktop version matches release tag
+        run: node scripts/check-desktop-version.mjs "${{ github.ref_name }}"
+
   build:
     name: Build (${{ matrix.platform }})
+    needs: validate-version
     strategy:
       fail-fast: false
       matrix:
