feat(desktop): import .xls via formula-xls + propagate number formats
- Route .xls opens through formula_xls::import_xls_path to preserve date system/styles
- Thread formula-model StyleTable through sheet conversion and set Cell.number_format from style_id
- Added tests for .xls 1904 date system and XLSX number format propagation

--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -39,6 +39,7 @@ formula-model = { path = "../../../crates/formula-model" }
 formula-storage = { path = "../../../crates/formula-storage" }
 formula-vba = { path = "../../../crates/formula-vba" }
 formula-vba-runtime = { path = "../../../crates/formula-vba-runtime" }
+formula-xls = { path = "../../../crates/formula-xls" }
 formula-xlsb = { path = "../../../crates/formula-xlsb", features = ["write"] }
 formula-xlsx = { path = "../../../crates/formula-xlsx" }
 serde = { version = "1.0", features = ["derive"] }
