fix(desktop): add CORP header to asset protocol for COEP
COEP require-corp blocks cross-origin subresources; Tauri's built-in asset:// handler does not send Cross-Origin-Resource-Policy, so convertFileSrc() images can fail to render once COEP is enabled.

- Override the asset: URI scheme handler to serve scoped files and attach\n  Cross-Origin-Resource-Policy: cross-origin (+ reflected ACAO).\n- Keep scope + SafePathBuf validation to avoid path traversal.\n- Add a small asset-protocol-test.html page for manual verification.

Note: This is intentionally desktop-only (behind the desktop feature).

--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -24,6 +24,8 @@ desktop = [
     "dep:tauri-plugin-single-instance",
     "dep:tauri-plugin-notification",
     "dep:tauri-plugin-updater",
+    "dep:http-range",
+    "dep:percent-encoding",
 ]
 # Enable Parquet/Arrow-backed columnar imports.
 #
@@ -63,6 +65,8 @@ tauri-plugin-single-instance = { version = "2.2", optional = true }
 tauri-plugin-notification = { version = "2", optional = true }
 tauri-plugin-updater = { version = "2.9", optional = true }
 thiserror = "1.0"
+http-range = { version = "0.1", optional = true }
+percent-encoding = { version = "2", optional = true }
 
 [dev-dependencies]
 cfb = "0.10"
