feat(desktop): feature-gated Parquet import
- Added optional "parquet" Cargo feature that enables formula-columnar Arrow/Parquet support\n- Implemented Parquet -> ColumnarTable import into a single columnar-backed sheet\n- Routed open_workbook .parquet to the new reader (with clear error when feature disabled)\n- Added feature-gated unit test against packages/data-io simple.parquet

--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -25,6 +25,11 @@ desktop = [
     "dep:tauri-plugin-notification",
     "dep:tauri-plugin-updater",
 ]
+# Enable Parquet/Arrow-backed columnar imports.
+#
+# This is kept behind an opt-in feature so default backend unit tests stay
+# lightweight (Arrow/Parquet pulls in a larger dependency surface).
+parquet = ["formula-columnar/arrow"]
 
 [dependencies]
 anyhow = "1.0"
