--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -39,6 +39,7 @@ aes-gcm = "0.10"
 base64 = "0.22"
 calamine = "0.26"
 directories = "5.0"
+futures-util = "0.3"
 formula-columnar = { path = "../../../crates/formula-columnar" }
 formula-engine = { path = "../../../crates/formula-engine" }
 formula-format = { path = "../../../crates/formula-format" }
