--- a/crates/formula-io/Cargo.toml
+++ b/crates/formula-io/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+cfb = "0.10"
 formula-format = { path = "../formula-format" }
 formula-model = { path = "../formula-model" }
 formula-xlsx = { path = "../formula-xlsx" }
