--- a/packages/ai-completion/package.json
+++ b/packages/ai-completion/package.json
@@ -4,5 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "main": "./src/index.js",
-  "types": "./src/index.d.ts"
+  "types": "./src/index.d.ts",
+  "scripts": {
+    "test": "node --test test/functionCatalogArtifact.test.js"
+  }
 }
