--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -78,7 +78,10 @@ http-range = { version = "0.1", optional = true }
 percent-encoding = { version = "2", optional = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
-# Optional, GTK-based clipboard support (requires system GTK dev packages).
+# GTK-based clipboard backend (Wayland + X11).
+#
+# Keep these dependencies optional so backend unit tests can run headless unless the `desktop`
+# feature is enabled.
 gtk = { version = "0.18", optional = true }
 gdk = { version = "0.18", optional = true }
 glib = { version = "0.18", optional = true }
