fix(wasm): enable getrandom v0.2 js backend for formula-engine
formula-engine's statrs dependency pulls in rand/getrandom v0.2, which fails to compile for wasm32-unknown-unknown without the "js" feature.

- Add a wasm-only getrandom@0.2 dependency alias with features=["js"]
- Update Cargo.lock so build:wasm and desktop e2e prebuild can compile

--- a/crates/formula-engine/Cargo.toml
+++ b/crates/formula-engine/Cargo.toml
@@ -35,6 +35,8 @@ dashmap = { version = "5", optional = true }
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 # `ahash` pulls in `getrandom` v0.3 which requires opting into a WASM backend.
 getrandom = { version = "0.3", features = ["wasm_js"] }
+# `statrs` pulls in `rand`, which depends on `getrandom` v0.2; enable its WASM backend too.
+getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
 
 [dev-dependencies]
 pretty_assertions = "1.4"
