feat(desktop): ship parquet support in desktop builds
- Make the "desktop" feature imply "parquet" so packaged builds can open .parquet by default\n- Register .parquet as a bundle file association in tauri.conf.json\n- Fix flaky SQL timeout tests by serializing env var overrides

--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -34,6 +34,8 @@ desktop = [
     "dep:gdk",
     "dep:glib",
     "dep:gdk-pixbuf",
+    # Desktop builds should be able to open `.parquet` files out of the box.
+    "parquet",
 ]
 # Enable Parquet/Arrow-backed columnar imports.
 #
