--- a/crates/formula-xls/Cargo.toml
+++ b/crates/formula-xls/Cargo.toml
@@ -8,6 +8,7 @@ calamine = "0.32"
 cfb = "0.10"
 encoding_rs = "0.8"
 formula-format = { path = "../formula-format" }
+formula-biff = { path = "../formula-biff", default-features = false }
 formula-model = { path = "../formula-model" }
 log = "0.4"
 thiserror = "2.0"
