--- a/services/sync-server/package.json
+++ b/services/sync-server/package.json
@@ -8,6 +8,7 @@
     "dev": "node scripts/node-with-tsx.mjs --watch src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
+    "stress": "node scripts/node-with-tsx.mjs src/stress.ts",
     "test": "node scripts/run-tests.mjs",
     "keyring:generate": "node scripts/node-with-tsx.mjs src/keyring-cli.ts generate",
     "keyring:rotate": "node scripts/node-with-tsx.mjs src/keyring-cli.ts rotate",
